--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "on",
     "array"
   ],
-  "author": "Juan Carlos Moreno Sanchez",
+  "author": "Juan Carlos Moreno Sanchez <carlos.moreno.phd@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
